project done, pre-heroku deploy

--- a/server/views/templates/general/home.jade
+++ b/server/views/templates/general/home.jade
@@ -1,3 +1,14 @@
 extends ../../layouts/master
 block content
-  h3 Home
+  h2.lead.text-center MJ's Image Corner
+  .container-fluid
+    .row
+      .col-xs-4
+        .lead Welcome~
+        p Welcome to MJ's image corner. This project is something I built from scratch while learning how to code with hapy.js, jade, mongoose, and mongodb. I also am practicing my CSS styling and learning more about bootstrap. 
+      .col-xs-4
+        .lead The Specifics:
+        p For this project in particular, we integrated Amazon Web Services, so that you can upload a photo and it will be hosted by AWS yet still displayed here. I built this on Friday, Feb. 20, 2015. It took me about 8 hours and 1 nap.
+      .col-xs-4
+        .lead Thank you!
+        p Thank you for stopping by. Feel free to try it out for yourself! You can create you own album, and add your own pictures, or modify any of the albums already created. You can find out more about me @ http://spinaldash.net.
