--- a/server/views/partials/nav.jade
+++ b/server/views/partials/nav.jade
@@ -6,7 +6,8 @@ nav.navbar.navbar-default
         span.icon-bar
         span.icon-bar
         span.icon-bar
-      a.navbar-brand(href='/') Hapi Prototype
+      a.navbar-brand(href='/') MJ's Image Corner
     #navbar.collapse.navbar-collapse
       ul.nav.navbar-nav.navbar-right
         li.active: a(href='/'): i.fa.fa-home &nbsp; Home
+        li.active: a(href='/albums'): i.fa.fa-camera-retro.fa-spin &nbsp; Photo Album
